generate package on build
Signed-off-by: Matthew Fisher <matt.fisher@fermyon.com>
Signed-off-by: Robert Gogete <gogeterobert@yahoo.com>

--- a/src/Fermyon.Nomad/Fermyon.Nomad.csproj
+++ b/src/Fermyon.Nomad/Fermyon.Nomad.csproj
@@ -12,6 +12,7 @@
     <Copyright>No Copyright</Copyright>
     <RootNamespace>Fermyon.Nomad</RootNamespace>
     <Version>0.1.1</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Fermyon.Nomad.xml</DocumentationFile>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/fermyon/nomad-dotnet.git</RepositoryUrl>
