--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,5 +26,5 @@ jobs:
           do
             echo Pushing $nupkg
             dotnet nuget push $nupkg --source https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
-            dotnet nuget push $nupkg --source https://api.nuget.org/v3/index.json ---api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
+            dotnet nuget push $nupkg --source https://api.nuget.org/v3/index.json --api-key ${{ secrets.NUGET_API_KEY }} --skip-duplicate
           done
