--- a/config.json
+++ b/config.json
@@ -1,6 +1,10 @@
 {
 	"generatorName": "csharp-netcore",
 	"packageName": "Fermyon.Nomad",
+	"packageAuthors": "Matthew Fisher",
+	"packageCompany": "Fermyon",
+	"gitRepoId": "nomad-dotnet",
+	"gitUserId": "fermyon",
 	"packageVersion": "0.3.0",
 	"targetFramework": "net6.0",
 	"licenseId": "Apache-2.0"
