--- a/src/Fermyon.Nomad/Fermyon.Nomad.csproj
+++ b/src/Fermyon.Nomad/Fermyon.Nomad.csproj
@@ -6,16 +6,17 @@
     <AssemblyName>Fermyon.Nomad</AssemblyName>
     <PackageId>Fermyon.Nomad</PackageId>
     <OutputType>Library</OutputType>
-    <Authors>OpenAPI</Authors>
-    <Company>OpenAPI</Company>
+    <Authors>Matthew Fisher</Authors>
+    <Company>Fermyon</Company>
     <AssemblyTitle>OpenAPI Library</AssemblyTitle>
     <Description>A library generated from a OpenAPI doc</Description>
     <Copyright>No Copyright</Copyright>
     <RootNamespace>Fermyon.Nomad</RootNamespace>
     <Version>0.3.0</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\Fermyon.Nomad.xml</DocumentationFile>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/GIT_USER_ID/GIT_REPO_ID.git</RepositoryUrl>
+    <RepositoryUrl>https://github.com/fermyon/nomad-dotnet.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageReleaseNotes>Minor update</PackageReleaseNotes>
     <Nullable>annotations</Nullable>
